--- a/vignettes/plinkQC.Rmd
+++ b/vignettes/plinkQC.Rmd
@@ -70,6 +70,7 @@ functions:
     (ii) `check_heterozygosity_and_missingness`: for the identification of
     individuals with outlying missing genotype and/or heterozygosity rates,
     (iii) `check_relatedness`: for the identification of related individuals
+    (iv) `superpop_classfication`: for prediction of genomic ancestry
 
 ## Per-marker quality control
 The per-marker quality control with `perMarkerQC` wraps around these
@@ -98,12 +99,28 @@ per-individual and per-marker quality control followed by the generation of the
 new dataset. In addition, the functionality of each of the functions underlying
 `perMarkerQC` and `perIndividualQC` is demonstrated at the end of this vignette.
 
+To run the ancestry functionality of the package, [Plink v2](https://www.cog-genomics.org/plink/2.0/) is needed. 
+Before use, the study data should be in the new hg38 annotation. USCS's [liftOver](https://genome.ucsc.edu/cgi-bin/hgLiftOver) tool
+may be needed to map variants from one annotation to another. More details on how
+to use the tool can be found on the processing [HapMap III reference data vignette](HapMap.html). We provide an example dataset that is in the hg38 annotation. 
+
+Additional loading matrices are needed for the PCA projection used in the model.
+This is hosted on the plinkQC github repo under the inst/extdata folder located 
+[here](https://github.com/meyer-lab-cshl/plinkQC/tree/ancestry_update/inst/extdata/load_mat). Alternatively, the whole github repo can downloaded with
+```{bash installing github, eval=FALSE}
+git clone git@github.com:meyer-lab-cshl/plinkQC.git
+```
+
+The name of the files (before the .acount or .eigenvec.allele) for the loading matrices must be included in the `path2load_mat` variable.
+
 ```{r set parameters}
 package.dir <- find.package('plinkQC')
 indir <- file.path(package.dir, 'extdata')
 qcdir <- tempdir()
-name <- 'data'
+name <- 'data.hg38'
 path2plink <- "/Users/syed/bin/plink"
+path2plink2 <- "/Users/syed/bin/plink2"
+path2load_mat <- "path/to/load_mat/merged_chrs.postQC.train.pca"
 ```
 
 ## Per-individual quality control
@@ -117,9 +134,14 @@ individual IDs to the qcdir. These IDs will be removed in the computation of the
 `perMarkerQC`. If the list is not present, `perMarkerQC` will send a message
 about conducting the quality control on the entire dataset.
 
+The ancestry portion of the package requires that the data should be in PLINK 2.0 format (i.e pgen, pvar, psam files), 
+and the variants identifiers should be formatted similar to the following example: 1:12345[hg38]. `perIndividualQC` will run the functions `convert_to_plink2()` and `rename_variant_identifiers()` to convert the data
+into PLINK 2.0 format and rename the variant identifiers respectively. 
+
 NB: To reduce the data size of the example data in `plinkQC`,
 data.genome  has already been reduced to the individuals that are related. Thus
-the relatedness plots in C only show counts for related individuals only.
+the relatedness plots in C only show counts for related individuals only. 
+For ancestry identification, there are 597 SNPs that overlap between the study and  reference data, roughly 0.2% of the reference dataset. Thus, additional noise is expected and visible in the plot below.
 
 `perIndividualQC` displays the results of the quality control steps in a
 multi-panel plot. 
@@ -199,54 +221,6 @@ into keep and remove individuals.
 ```{r clean data, eval=FALSE}
 Ids  <- cleanData(indir=indir, qcdir=qcdir, name=name, path2plink=path2plink,
                             verbose=TRUE, showPlinkOutput=FALSE)
-```
-
-## Predicting Ancestry
-After filtering low quality markers and samples, it may be useful to predict the genomic ancestry of the samples. 
-We included a pre-trained random forest classifier to predict the genomic ancestry of the samples. [Plink v2](https://www.cog-genomics.org/plink/2.0/) is needed for this portion of the package.
-
-Before use, the study data should be in the new hg38 annotation. USCS's [liftOver](https://genome.ucsc.edu/cgi-bin/hgLiftOver) tool
-may be needed to map variants from one annotation to another. More details on how
-to use the tool can be found on the processing [HapMap III reference data vignette](HapMap.html). We provide an example dataset that is in the hg38 annotation. 
-
-Additional loading matrices are needed for the PCA projection used in the model.
-This is hosted on the plinkQC github repo under the inst/extdata folder located 
-[here](https://github.com/meyer-lab-cshl/plinkQC/tree/ancestry_update/inst/extdata/load_mat). Alternatively, the whole github repo can downloaded with
-```{bash installing github, eval=FALSE}
-git clone git@github.com:meyer-lab-cshl/plinkQC.git
-```
-
-In addition, the data should be in PLINK 2.0 format (i.e pgen, pvar, psam files), 
-and the variants identifiers should be formatted similar to the following example: 1:12345[hg38].
-We included the functions `convert_to_plink2()` and `rename_variant_identifiers()`
-to correctly format genomic data that is in the hg38 annotation. 
-The name of the files (before the .acount or .eigenvec.allele) for the loading matrices must be included in the `path2load_mat` variable. 
-
-``` {R, eval = FALSE}
-name = "data.hg38"
-path2load_mat = "path/to/load_mat/merged_chrs.postQC.train.pca"
-path2plink2 = "/Users/syed/bin/plink2"
-convert_to_plink2(indir=indir, qcdir=qcdir, name=name, 
-                  path2plink2 = path2plink2)
-rename_variant_identifiers(indir=qcdir, qcdir=qcdir, name=name, 
-                           path2plink2 = path2plink2)
-name <- paste0(name, ".renamed")
-```
-
-After correctly formatting the variants, we can use the provided function to return the 
-predicted ancestry. Because the example dataset has only a small number of variants 
-overlapping with the reference dataset, additional noise is expected.
-``` {R ancestry identification, eval = FALSE}
-ancestries <- superpop_classification(indir=qcdir, qcdir=qcdir, name=name, 
-                                      path2plink2 = path2plink2, 
-                                      path2load_mat = path2load_mat) 
-```
-
-```{r load ancestry, out.width = "500px", echo=FALSE}
-#| fig.alt: >
-#|   Bar graph showing predicted ancestry fractions 
-par(mfrow=c(2,1), las=1)
-knitr::include_graphics("ancestral_prediction.png")
 ```
 
 \newpage
