update names and intro text

--- a/INDEX.Rmd
+++ b/INDEX.Rmd
@@ -18,25 +18,10 @@ knitr::opts_chunk$set(
 
 ## <i class="fa fa-map" aria-hidden="true"></i> plinkQC
 
-**plinkQC** is a R/CRAN package for **genotype quality control** in genetic
-association studies. It makes PLINK basic statistics (e.g.missing genotyping
-rates per individual, allele frequencies per genetic marker) and relationship
-functions easily accessible from within R and allows for automatic evaluation
-of the results.
+**plinkQC** is a R/CRAN package for **genotype quality control** including a pre-trained ancestry classifier and relatedness filter optimized to retain the maximally unrelated sample set with highest quality.
 
 **plinkQC** generates a per-individual and per-marker quality control report.
-A step-by-step guide on how to run these analyses can be found [here](https://meyer-lab-cshl.github.io/plinkQC/articles/plinkQC.html).
-
-Individuals and markers that fail the quality control can subsequently be
-removed with **plinkQC** to generate a new, clean dataset.
-
-**plinkQC** facilitates an ancestry check for study individuals based on
-comparison to reference datasets. The processing of the reference datasets is
-documented in detail
-[here](https://meyer-lab-cshl.github.io/plinkQC/articles/AncestryCheck.html).
-
-Removal of individuals based on relationship status via **plinkQC** is optimised
-to retain as many individuals as possible in the study.
+A step-by-step guide on how to run these analyses can be found [here](https://meyer-lab-cshl.github.io/plinkQC/articles/plinkQC.html). Individuals and markers that fail the quality control can subsequently be removed with **plinkQC** to generate a new, clean dataset.
 
 ```{r, echo = FALSE}
 knitr::include_graphics("qc.png")
@@ -44,14 +29,14 @@ knitr::include_graphics("qc.png")
 
 ## <i class="fa fa-rocket" aria-hidden="true"></i> Installation
 
-The current github version of **plinkQC**  is: 0.3.4 and can be
+The current github version of **plinkQC**  is: 1.0.0 and can be
 installed via
 ```{r github install, eval=FALSE}
 library(devtools)
 install_github("meyer-lab-cshl/plinkQC")
 ```
 
-The current CRAN version of **plinkQC**  is: 0.3.4 and can be
+The current CRAN version of **plinkQC**  is: 1.0.0 and can be
 installed via
 ```{r install, eval=FALSE}
 install.packages("plinkQC")
@@ -60,6 +45,6 @@ install.packages("plinkQC")
 A log of version changes can be found [here](https://meyer-lab-cshl.github.io/plinkQC/news/index.html).
 
 ## <i class="fa fa-pencil" aria-hidden="true"></i> Citation
-Meyer HV (2020) plinkQC: Genotype quality control in genetic association
+Syed M, Walter C and Meyer HV (2025) plinkQC: Genotype quality control in genetic association
 studies. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3934294.svg)](https://doi.org/10.5281/zenodo.3934294)
 
